recursion.lessons.recursion.tree.Tree.scala.error
Tree:24: error: ambiguous reference to overloaded definition,
both method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
and  method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
match argument types (Int,Double,Double,Double)
			subtree(steps-1, length*shrink, angle, shrink);
                        ^Tree:26: error: ambiguous reference to overloaded definition,
both method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
and  method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
match argument types (Int,Double,Double,Double)
			subtree(steps-1, length*shrink, angle, shrink);
                        ^Tree:38: error: ambiguous reference to overloaded definition,
both method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
and  method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
match argument types (Int,Double,Double,Double)
			subtree(steps-1, length*shrink, angle, shrink);
                        ^Tree:40: error: ambiguous reference to overloaded definition,
both method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
and  method subtree in class Tree of type (steps: Int, length: Double, angle: Double, shrink: Double)Unit
match argument types (Int,Double,Double,Double)
			subtree(steps-1, length*shrink, angle, shrink);
                        ^Tree:33: error: method subtree is defined twice
  conflicting symbols both originated in file 'plm.runtime58.Tree'
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
            ^